package ejercicio2.codigo;

public interface BatallaNaval {
    boolean disparar(char[][] tablero, int fila, int columna);
}
