package ejercicio2.codigo;

import java.util.Scanner;

public interface EntradaDatos {
    int introducirEnteroEntreLimites(Scanner scanner, int minimo, int max);
}
