package ejercicio2.codigo;

public interface TableroOperaciones {
    char[][] crearTablero();
    void inicializarTablero(char[][] tablero);

    void mostrarTablero(char[][] tablero);
}
